global.css
@import url('https://fonts.googleapis.com/css?family=Lexend:200,300,400,500,700,900&display=swap');
@import url('https://fonts.googleapis.com/css?family=Roboto:200,300,400,500,700,900&display=swap');

  ::-webkit-scrollbar {
    width: 10px;
  }
  ::-webkit-scrollbar-track {
    background: #b5b5b5de;
  }

  ::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 30px;
  }

  ::-webkit-scrollbar-thumb:hover {
    background: #555;
    scale: 1.1;
  }

html {
    scroll-behavior: smooth;
}
body {
    margin: 0;
    padding: 0;
    font-family: Lexend, sans-serif;
}
a:link {
    text-decoration: none;
    color: inherit;
}
a {
    color: black;
}
.bg-gradient {
    background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgb(190 190 190) 0%, rgba(255,255,255,1) 100%);
}
@media screen and (max-width: 1380px) {
    .bg-gradient {
        background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(184,184,184,1) 0%, rgba(255,255,255,1) 100%);
    }

}
.instagram:hover {
    color: #E1306C;
}
.facebook:hover {
    color: #3B5998;
}
.discord:hover {
    color: #a155df;
}
.profile {
    transition: 0.3s;
    filter: grayscale(100%);
}
.profile:hover {
    cursor: pointer;
    filter: grayscale(0%);
    box-shadow: 0 0 25px 0 rgba(0,0,0,0.5);
}
.pasek {
    background: #BABABA;
    height: 10px;
    width: 100%;
    border-radius: 15px;
}
.loaded {
    background: #6C6C6C;
    height: 10px;
    border-radius: 15px;
}
.btn {
    border-radius: 17px;
    padding: 14px 47px 14px 55px;
    box-shadow: inset 0px 0px 0px 0px #00000040, 0px 4px 12px 0px #00000040;
    background: #D9D9D905;
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 100px;
    transition: 0.2s;
    gap: 10%;
}
.btn:hover {
    margin-top: 3px;
    margin-bottom: -3px;
    cursor: pointer;
    box-shadow: inset 0px 3px 6px 0px #00000040, 0px 0px 0px 0px #00000040;
}
.img-shadow {
    box-shadow: 0px 4px 54px 0px #0000002B;
    border-radius: 13px;
}
.img-sub {
    transition: 0.3s;
}
.img-sub:hover {
    cursor: pointer;
    box-shadow: 0px 4px 54px 0px #0000002B;
    border-radius: 13px;
    transform: scale(1.05);
}

